# rust-webservice-study

./: .env  Cargo.toml  README.md
actix-ws/: .env  Cargo.toml
actix-ws/src/: .env  app.rs  data_source.rs  errors.rs  lib.rs  main.rs  server.rs
actix-ws/src/account/: handlers.rs  routes.rs
actix-ws/src/auth/: handlers.rs  routes.rs
actix-ws/src/base/: handlers.rs  routes.rs
actix-ws/src/cat/: handlers.rs  routes.rs
actix-ws/src/middlewares/: auth.rs
axum-ws/: Cargo.toml
common/: Cargo.toml
common/src/: crypto.rs  lib.rs  validation.rs
domains/: Cargo.toml
domains/migrations/: 20230222101545_cats_table.up.sql  20230224160931_accounts_table.up.sql  20230227184348_date_uniformization.up.sql
domains/src/: auth.rs  cat.rs  data_source.rs  lib.rs
domains/src/account/: controller_mock.rs  models.rs
domains/src/account/mock/: accounts.json
domains/src/auth/: controller_mock.rs  models.rs
domains/src/cat/: cats.json  controller_db.rs  controller_mock.rs  models.rs
domains/src/cat/migrations/: 20230222101545_cats_table.up.sql
domains/src/cat/mock/: cats.json
errors/: Cargo.toml
errors/src/: app_error.rs  field_errors.rs  handle_rejection.rs  lib.rs
setup/: Cargo.toml  config.toml
setup/src/: api.rs  app_config.rs  config.rs  db_store.rs  helpers.rs  jwt.rs  lib.rs
setup/src/config/: app_config.rs  auth_config.rs  db_config.rs  server_config.rs
warp-ws/: .env  Cargo.toml
warp-ws/src/: helpers.rs  lib.rs  main.rs  server.rs
warp-ws/src/base/: handlers.rs  routes.rs
warp-ws/src/cat/: handlers.rs  routes.rs
