[package]
name = "rust-webservice-study"
version = "0.1.0"
authors = ["XD <blueheim>"]
edition = "2021"

[workspace]
members = ["actix-ws", "warp-ws", "axum-ws"]

[workspace.dependencies]
domains = { path = "domains" }
setup = { path = "setup" }
errors = { path = "errors" }

# Data serialization libraries
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

# Utilities
derive_more = "0.99.17"
dotenv = "0.15.0"
async-trait = "0.1.64"
chrono = {version = "0.4.23", features = ["serde"]}
uuid = { version = "1.3.0", features = ["serde", "v4"] }
rand = "0.8.5"

# Crypto/Hashing
argon2 = "0.4.1"

# Web Servers
# Actix web
actix-web = "4.3.0"
actix-cors = "0.6.4"

# DB Access library
sqlx = {version = "0.6.2", default_features = false, features = ["postgres","runtime-tokio-native-tls", "macros","chrono", "uuid"]}

# Logging and tracing
log = "0.4.17"
env_logger = "0.10.0"