[package]
name = "actix-ws"
version = "0.1.0"
authors = ["XD <blueheim>"]
edition = "2021"

[dependencies]
# Workspace
setup = { workspace = true }
domains = { workspace = true }
errors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_more = { workspace = true }
dotenv = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
actix-web = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
