[package]
name = "domains"
version = "0.1.0"
authors = ["XD <blueheim>"]
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

#Postgres access library
sqlx = {version = "0.6.2", default_features = false, features = ["postgres","runtime-tokio-native-tls", "macros","chrono"]}