[package]
name = "errors"
version = "0.1.0"
authors = ["XD <blueheim>"]
edition = "2021"

[dependencies]
derive_more = { workspace = true }
sqlx = { workspace = true }
actix-web = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
common = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
serde = { workspace = true }