[package]
name = "setup"
version = "0.1.0"
authors = ["XD <blueheim>"]
edition = "2021"

[dependencies]
config = { workspace= true }
serde = { workspace= true }
sqlx = { workspace= true }
errors = { workspace= true }
jsonwebtoken = { workspace= true }
argon2 = { workspace= true }
lazy_static = { workspace= true }
chrono = { workspace= true }
serde_json = { workspace= true }
