[package]
name = "warp-ws"
version = "0.1.0"
authors = ["XD <blueheim>"]
edition = "2021"

[[bin]]
name = "server"

[dependencies]
# Workspace
setup = { workspace = true }
domains = { workspace = true }
errors = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
warp = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
chrono = { workspace = true }